# Wyoming-SaluteSpeech-Gateway

./: README.md  poetry.toml  pyproject.toml
docker/: Dockerfile  entrypoint.sh
src/wyoming_salutespeech_gateway/: __init__.py  __main__.py  app.py  ca_cert.py  client.py  event_handler.py  model_stub.py  server.py
tests/: client_recognize_test.py  client_synthesize_test.py  wyoming_salutespeech_gateway_test.py
