[tool.poetry]
name = "wyoming-salutespeech-gateway"
version = "0.2"
description = "A gateway between a Wyoming protocol client and SberDevices SaluteSpeech STT/TTS cloud service."
authors = ["sergemart <serge.martynov@gmail.com>"]
readme = "README.md"
packages = [{include = "wyoming_salutespeech_gateway", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
wyoming = {git = "https://github.com/rhasspy/wyoming.git"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
